2010-07-03  Bruno Haible  <bruno@clisp.org>

	Support for MacOS X in 64-bit mode.
	* m4/mmap.m4 (CL_MMAP): On MacOS X in 64-bit mode, use a base address,
	so that the test succeeds.
	* lispbibl.d (HEAPCODES): Define by default on MacOS X in 64-bit mode.
	* spvw.d (init_memory): Hardcode bounds for mmap on MacOS X in
	64-bit mode.
	* makemake.in (cpu): On MacOS X in 64-bit mode, set it to x86_64.

2010-07-03  Bruno Haible  <bruno@clisp.org>

	* makemake.in: Consistent indentation of if-then-else commands.

2010-07-02  Sam Steingold  <sds@gnu.org>

	* init.lisp (load): add RETRY restart to SKIP and STOP
	* condition.lisp (eval-loaded-form): ditto

2010-06-27  Sam Steingold  <sds@gnu.org>

	Support libsvm 2.91
	* modules/libsvm/configure.in: check for svm_set_print_string_function;
	drop pkg-config support
	* modules/libsvm/libsvm.lisp: call svm_set_print_string_function
	when it is available

2010-06-25  Sam Steingold  <sds@gnu.org>

	* spvw.d (quit): FINISH-OUTPUT on standard streams before saying "Bye"

2010-06-24  Sam Steingold  <sds@gnu.org>

	* stream.d (IS_EINVAL_EXTRA): treat all *BSD flavors like DARWIN

2010-06-24  Sam Steingold  <sds@gnu.org>

	* makemake.in (anymodule): use CLISP_LIBDIR instead of HEREP
	because it is decolonized to prevent "multiple target patterns"

2010-06-24  Sam Steingold  <sds@gnu.org>

	fix bug#3020933: (SETF STREAM-EXTERNAL-FORMAT) fails on TWO-WAY-STREAM
	* stream.d (SET-STREAM-EXTERNAL-FORMAT): handle TWO-WAY-STREAM and
	ECHO-STREAM together with TWO-WAY-SOCKET; use stream_reset_eltype
	to reset pseudofunctions in case line terminator changed

2010-06-24  Sam Steingold  <sds@gnu.org>

	* m4/termcap.m4 (CL_TERMCAP): fix a $LIBTERMCAP test
	Reported by Yaroslav Kavenchuk <kavenchuk@jenty.by>

2010-06-24  Yaroslav Kavenchuk  <kavenchuk@jenty.by>

	* m4/clisp.m4 (CL_DECOLONIZE): fix a typo in the mingw regexp

2010-06-18  Barry Fishman  <barry_fishman@acm.org>
	Sam Steingold  <sds@gnu.org>
