@@ -312,3 +312,19 @@ nil
            (map 'vector #'code-char v)))
     (delete-file file)))
 #+CLISP #(#\Return #\Newline #\Newline)
+
+;; https://sourceforge.net/tracker/?func=detail&atid=101355&aid=3024887&group_id=1355
+#+(and CLISP UNIX)
+(let ((file "test-pipe"))
+  (unwind-protect
+       (dolist (b '(nil t))
+         (with-open-stream (out (ext:make-pipe-output-stream
+                                 (format nil "/bin/cat > ~A" file)
+                                 :external-format charset:utf-8 :buffered b))
+           (loop for i below 1000 do (print i out)))
+         (sleep 1)              ; let cat terminate
+         (with-open-file (in file :direction :input
+                             :external-format charset:utf-8)
+           (loop for i below 1000 do (assert (= i (read in))))))
+    (delete-file file)))
+#+(and CLISP UNIX) NIL
