@@ -1,3 +1,8 @@
+2010-07-04  Sam Steingold  <sds@gnu.org>
+
+	Fix unbuffered output pipe stream initialization (bug#3024887).
+	* stream.d (make_pipe): init output unbuffered streams appropriately
+
 2010-07-03  Bruno Haible  <bruno@clisp.org>
 
 	Support for MacOS X in 64-bit mode.
